--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -81,6 +81,99 @@ body {
   color: #fc516d;
 }
 
+.defaultBtn {
+  font-size: 16px;
+  border: #333 2px solid;
+  border-radius: 24px;
+  color: #333;
+  padding: 4px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s all;
+}
+
+.defaultBtn:hover {
+  color: white;
+  background-color: #EAAF88;
+  border-color: #EAAF88;
+}
+
+.btn-more {
+  width: 160px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  font-family: notoSans_r;
+}
+
+.btn-more:hover {
+  color: #fff;
+}
+
+.btn-more:before {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  content: '';
+  position: absolute;
+  left: -100%;
+  background-color: transparent;
+  transition: .3s;
+  z-index: -1;
+}
+
+.btn-more:hover:before {
+  left: 0;
+  background-color: #333;
+}
+
+.btn-more:after {
+  margin-top: -7px;
+  width: 7px;
+  height: 13px;
+  background: url(../images/icon01.png) no-repeat right center;
+  position: absolute;
+  top: 50%;
+  right: 18px;
+  content: "";
+}
+
+.breadcrumbs {
+  margin-bottom: 40px;
+  font-size: 18px;
+}
+
+.breadcrumbs a {
+  font-size: 14px;
+  text-decoration: none;
+  border-width: 1px;
+  padding: 4px 10px;
+  text-align: center;
+}
+
+@media all and (max-width: 767px) {
+  .breadcrumbs {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .breadcrumbs a {
+    border: none;
+    padding: 0;
+  }
+  .breadcrumbs a:hover {
+    color: #333;
+    background-color: transparent;
+    border-color: transparent;
+  }
+}
+
 .container {
   max-width: 991px;
   margin: 0 auto;
@@ -228,8 +321,6 @@ footer span {
   top: -20px;
   padding: 10px;
 }
-<<<<<<< HEAD
-=======
 
 @media all and (min-width: 768px) and (max-width: 991px) {
   footer {
@@ -248,7 +339,6 @@ footer span {
     text-align: center;
   }
 }
->>>>>>> 22b3feac623e334b1e3ff9161f88910418e0f035
 
 .btns .btn {
   font-size: 30px;
@@ -364,93 +454,104 @@ header ul li:nth-child(2):after {
 }
 
 .right {
-  background-image: url(../../images/marble.jpg);
+  background-image: url(../images/marble.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   margin-left: 200px;
-  padding-top: 30px;
+  padding-top: 50px;
+}
+
+.right .breadcrumbs {
+  margin-left: 50px;
+  margin-bottom: 0;
 }
 
 .right .banner {
-  background-image: url(../../images/halfdetail1.jpg);
-  background-position: 50%;
-  background-repeat: no-repeat;
-  width: 85%;
-  padding-top: 35%;
   margin: auto;
-  position: relative;
 }
 
-.right .banner h2 {
-  color: #333;
-  letter-spacing: 10px;
-  background-color: rgba(241, 209, 146, 0.815);
-  color: #000;
-  font-size: 36px;
-  font-weight: bolder;
-  width: 30%;
-  text-align: center;
-  position: absolute;
-  top: -20px;
-  left: 50%;
-  line-height: 6vw;
-}
-
-.right .banner .intro {
-  width: 70%;
-  position: absolute;
-  top: 55%;
-  left: -3%;
-  font-size: 18px;
-  line-height: 2.0;
-  padding: 20px;
-  background-color: rgba(241, 232, 214, 0.815);
-  z-index: 1;
-  color: #111;
-}
-
-.right .banner .contact {
-  width: 35%;
-  position: absolute;
-  top: 25%;
-  left: 70%;
-  font-size: 18px;
-  line-height: 2.28571;
-  padding: 20px;
-  background-color: rgba(241, 232, 214, 0.815);
-  z-index: 1;
-  color: #111;
-}
-
-.right .banner .star {
-  width: 38%;
-  position: absolute;
-  top: 90%;
-  left: 65%;
-  padding: 20px;
-  background-color: rgba(241, 209, 146, 0.815);
-  /****** Style Star Rating Widget *****/
-  /***** CSS Magic to Highlight Stars on Hover *****/
-  /* hover previous stars in list */
-}
-
-.right .banner .star:after {
+.right .banner:after {
   content: '';
   display: block;
   clear: both;
 }
 
-.right .banner .star .rating {
-  border: none;
-  float: left;
+.right .banner h2 {
+  background-color: rgba(241, 209, 146, 0.7);
+  color: #111;
+  padding: 10px 15px;
+  font-size: 18px;
+  line-height: 2.0;
+  background-color: transparent;
+  letter-spacing: 10px;
+  font-size: 36px;
+  text-align: center;
+  padding: 15px 15px 5px 15px;
+  width: 80%;
+  margin: auto;
 }
 
-.right .banner .star .rating > input {
+.right .banner .contact {
+  background-color: rgba(241, 209, 146, 0.7);
+  color: #111;
+  padding: 10px 15px;
+  font-size: 18px;
+  line-height: 2.0;
+  background-color: transparent;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+}
+
+.right .banner .container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.right .banner .container .bigpic {
+  width: 65%;
+  margin: 15px;
+  margin-top: 50px;
+  background-image: url(../images/halfdetail1.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.right .banner .container .text {
+  width: 50%;
+  margin: 15px;
+}
+
+.right .banner .container .text .intro {
+  background-color: rgba(241, 209, 146, 0.7);
+  color: #111;
+  padding: 10px 15px;
+  font-size: 18px;
+  line-height: 2.0;
+  padding-top: 30px;
+}
+
+.right .banner .container .text .star {
+  background-color: rgba(241, 209, 146, 0.7);
+  color: #111;
+  padding: 10px 15px;
+  font-size: 18px;
+  line-height: 2.0;
+  /****** Style Star Rating Widget *****/
+  /***** CSS Magic to Highlight Stars on Hover *****/
+  /* hover previous stars in list */
+}
+
+.right .banner .container .text .star .rating {
+  border: none;
+}
+
+.right .banner .container .text .star .rating > input {
   display: none;
 }
 
-.right .banner .star .rating > label:before {
+.right .banner .container .text .star .rating > label:before {
   margin: 5px;
   font-size: 1.25em;
   font-family: FontAwesome;
@@ -458,46 +559,42 @@ header ul li:nth-child(2):after {
   content: "\f005";
 }
 
-.right .banner .star .rating > .half:before {
+.right .banner .container .text .star .rating > .half:before {
   content: "\f089";
   position: absolute;
 }
 
-.right .banner .star .rating > label {
+.right .banner .container .text .star .rating > label {
   color: #fff;
   float: right;
 }
 
-.right .banner .star .rating > input:checked ~ label,
-.right .banner .star .rating:not(:checked) > label:hover,
-.right .banner .star .rating:not(:checked) > label:hover ~ label {
+.right .banner .container .text .star .rating > input:checked ~ label,
+.right .banner .container .text .star .rating:not(:checked) > label:hover,
+.right .banner .container .text .star .rating:not(:checked) > label:hover ~ label {
   color: #f3284a;
 }
 
-.right .banner .star .rating > input:checked + label:hover,
-.right .banner .star .rating > input:checked ~ label:hover,
-.right .banner .star .rating > label:hover ~ input:checked ~ label,
-.right .banner .star .rating > input:checked ~ label:hover ~ label {
+.right .banner .container .text .star .rating > input:checked + label:hover,
+.right .banner .container .text .star .rating > input:checked ~ label:hover,
+.right .banner .container .text .star .rating > label:hover ~ input:checked ~ label,
+.right .banner .container .text .star .rating > input:checked ~ label:hover ~ label {
   color: #f3284a;
 }
 
-.right .banner .star .text {
-  width: 68%;
-  float: left;
-  text-align: center;
+.right .banner .container .text .star .ratingtext {
+  padding: 15px;
+  text-align: right;
   font-size: 18px;
+  vertical-align: middle;
 }
 
-.right .banner .star .text span {
+.right .banner .container .text .star .ratingtext span {
   font-size: 27px;
 }
 
-.right .smallintro {
-  display: none;
-}
-
 .right .halfwaypic {
-  margin: 6% auto;
+  margin: 20px auto 50px auto;
 }
 
 .right .halfwaypic .container {
@@ -515,7 +612,7 @@ header ul li:nth-child(2):after {
 }
 
 .right .cat {
-  background-image: url(../../images/catbg2.jpeg);
+  background-image: url(../images/catbg2.jpeg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -622,7 +719,7 @@ header ul li:nth-child(2):after {
 }
 
 .right .talk {
-  background-image: url(../../images/talk.jpg);
+  background-image: url(../images/talk.jpg);
   background-attachment: fixed;
   background-position: 20%;
   background-repeat: no-repeat;
@@ -722,30 +819,8 @@ header ul li:nth-child(2):after {
     padding: 0;
     margin: 0;
   }
-  .right .banner {
-    width: 100%;
-    padding-top: 80vh;
+  .right .banner .container .bigpic {
     animation: bb 20s linear infinite;
-  }
-  .right .banner h2 {
-    top: 3%;
-    left: 3%;
-    width: 60%;
-    line-height: 8vw;
-  }
-  .right .banner .intro {
-    display: none;
-  }
-  .right .banner .contact {
-    width: 60%;
-    top: 30vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-  }
-  .right .banner .star {
-    left: 60%;
-    top: 63vh;
   }
   @keyframes bb {
     20% {
@@ -761,17 +836,7 @@ header ul li:nth-child(2):after {
       background-image: url(../images/halfdetail4.jpg);
     }
   }
-  .right .smallintro {
-    display: block;
-    background-color: #F1E8D6;
-    padding: 30px 30px;
-    font-size: 14px;
-    line-height: 2.0;
-  }
   .right .halfwaypic {
-    display: none;
-  }
-  .right .cat .flycat {
     display: none;
   }
   .right .cat .container .catitem {
@@ -792,40 +857,22 @@ header ul li:nth-child(2):after {
     padding: 0;
     margin: 0;
   }
-  .right .banner {
-    width: 100%;
-    padding-top: 80vh;
-    animation: bb 20s linear infinite;
-  }
   .right .banner h2 {
-    top: 3%;
-    left: 3%;
-    width: 60%;
-    line-height: 8vw;
-  }
-  .right .banner .intro {
-    display: none;
+    width: 70%;
+    background-color: transparent;
   }
   .right .banner .contact {
-    width: 60%;
-    top: 20vh;
-    left: 0;
-    right: 0;
-    margin: auto;
+    width: 70%;
+    background-color: transparent;
   }
-  .right .banner .star {
-    width: 60%;
-    top: 55vh;
-    left: 0;
-    right: 0;
-    margin: auto;
+  .right .banner .container {
+    display: block;
   }
-  .right .banner .star .rating {
-    font-size: 25.2px;
-    margin: 0 auto;
-  }
-  .right .banner .star .text {
+  .right .banner .container .bigpic {
     width: 100%;
+    padding-top: 65%;
+    margin: 0;
+    animation: bb 20s linear infinite;
   }
   @keyframes bb {
     20% {
@@ -841,10 +888,12 @@ header ul li:nth-child(2):after {
       background-image: url(../images/halfdetail4.jpg);
     }
   }
-  .right .halfwaypic {
-    display: none;
+  .right .banner .container .text {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 50px;
   }
-  .right .cat .flycat {
+  .right .halfwaypic {
     display: none;
   }
   .right .cat .container .catitem {
