--- a/sass/halfway_house_detail.scss
+++ b/sass/halfway_house_detail.scss
@@ -3,6 +3,7 @@
 @import 'base/_boxsizing.scss';
 @import 'base/_font.scss';
 @import "base/_genderIcon";
+@import "base/_btn.scss";
 @import 'layout/_container.scss';
 @import 'mixins/_rwd.scss';
 @import 'mixins/_clearfloat.scss';
