--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -1,129 +1,117 @@
+@mixin text() {
+    background-color: rgba(241, 209, 146, .7);
+    color: #111;
+    padding: 10px 15px;
+    font-size: $font-size-large;
+    line-height: $line-height-base*1.4;
+}
+
 @include navNow(2);
 .right {
-    background-image: url(../../images/marble.jpg);
+    background-image: url(../images/marble.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
     margin-left: 200px;
-    padding-top: 30px;
+    padding-top: 50px;
+    .breadcrumbs{
+        margin-left: 50px;
+        margin-bottom: 0;
+    }
     .banner {
-        background-image: url(../../images/halfdetail1.jpg);
-        background-position: 50%;
-        background-repeat: no-repeat;
-        width: 85%;
-        padding-top: 35%;
         margin: auto;
-        position: relative;
+        @include clear;
         h2 {
-            color: #333;
+            @include text;
+            background-color: transparent;
             letter-spacing: 10px;
-            background-color: rgba(241, 209, 146, 0.815);
-            color: #000;
             font-size: $font-size-h1;
-            font-weight: bolder;
-            width: 30%;
             text-align: center;
-            position: absolute;
-            top: -20px;
-            left: 50%;
-            line-height: 6vw;
-        }
-        .intro {
-            width: 70%;
-            position: absolute;
-            top: 55%;
-            left: -3%;
-            font-size: $font-size-large;
-            line-height: $line-height-base*1.4;
-            padding: 20px;
-            background-color: rgba(#F1E8D6, 0.815);
-            z-index: 1;
-            color: #111;
+            padding: 15px 15px 5px 15px;
+            width: 80%;
+            margin: auto;
         }
         .contact {
-            width: 35%;
-            position: absolute;
-            top: 25%;
-            left: 70%;
-            font-size: $font-size-large;
-            line-height: $line-height-base*1.6;
-            padding: 20px;
-            background-color: rgba(#F1E8D6, 0.815);
-            z-index: 1;
-            color: #111;
+            @include text;
+            background-color: transparent;
+            text-align: center;
+            width: 80%;
+            margin: auto;
         }
-        .star {
-            width: 38%;
-            position: absolute;
-            top: 90%;
-            left: 65%;
-            padding: 20px;
-            background-color: rgba(241, 209, 146, 0.815);
-            @include clear; 
-            // .star{
-            //     width: 60%;
-            //     float: left;
-            //     font-size: $font-size-large*1.6;
-            //     .fa-star{
-            //         color: rgb(243, 40, 74);
-            //     }
-            // }
-            /****** Style Star Rating Widget *****/
-            .rating {
-                border: none;
-                float: left;
-            }
-            .rating>input {
-                display: none;
-            }
-            .rating>label:before {
-                margin: 5px;
-                font-size: 1.25em;
-                font-family: FontAwesome;
-                display: inline-block;
-                content: "\f005";
-            }
-            .rating>.half:before {
-                content: "\f089";
-                position: absolute;
-            }
-            .rating>label {
-                color: #fff;
-                float: right;
-            }
-            /***** CSS Magic to Highlight Stars on Hover *****/
-            .rating>input:checked~label,
-            /* show gold star when clicked */
-            .rating:not(:checked)>label:hover,
-            /* hover current star */
-            .rating:not(:checked)>label:hover~label {
-                color: rgb(243, 40, 74);
-            }
-            /* hover previous stars in list */
-            .rating>input:checked+label:hover,
-            /* hover current star when changing rating */
-            .rating>input:checked~label:hover,
-            .rating>label:hover~input:checked~label,
-            /* lighten current selection */
-            .rating>input:checked~label:hover~label {
-                color: rgb(243, 40, 74);
+        .container {
+            display: flex;
+            justify-content: space-around;
+            .bigpic {
+                width: 65%;
+                margin: 15px;
+                margin-top: 50px;
+                background-image: url(../images/halfdetail1.jpg);
+                background-size: 100%;
+                background-repeat: no-repeat;
             }
             .text {
-                width: 68%;
-                float: left;
-                text-align: center;
-                font-size: $font-size-large;
-                span {
-                    font-size: $font-size-large*1.5;
+                width: 50%;
+                margin: 15px;
+                .intro {
+                    @include text;
+                    padding-top: 30px;
+                }
+                .star {
+                    @include text;
+                    /****** Style Star Rating Widget *****/
+                    .rating {
+                        border: none;
+                    }
+                    .rating>input {
+                        display: none;
+                    }
+                    .rating>label:before {
+                        margin: 5px;
+                        font-size: 1.25em;
+                        font-family: FontAwesome;
+                        display: inline-block;
+                        content: "\f005";
+                    }
+                    .rating>.half:before {
+                        content: "\f089";
+                        position: absolute;
+                    }
+                    .rating>label {
+                        color: #fff;
+                        float: right;
+                    }
+                    /***** CSS Magic to Highlight Stars on Hover *****/
+                    .rating>input:checked~label,
+                    /* show gold star when clicked */
+                    .rating:not(:checked)>label:hover,
+                    /* hover current star */
+                    .rating:not(:checked)>label:hover~label {
+                        color: rgb(243, 40, 74);
+                    }
+                    /* hover previous stars in list */
+                    .rating>input:checked+label:hover,
+                    /* hover current star when changing rating */
+                    .rating>input:checked~label:hover,
+                    .rating>label:hover~input:checked~label,
+                    /* lighten current selection */
+                    .rating>input:checked~label:hover~label {
+                        color: rgb(243, 40, 74);
+                    }
+                    .ratingtext {
+                        padding: 15px;
+                        text-align: right;
+                        font-size: $font-size-large;
+                        vertical-align: middle;
+                        span {
+                            font-size: $font-size-large*1.5;
+                        }
+                    }
                 }
             }
         }
     }
-    .smallintro {
-        display: none;
-    }
     .halfwaypic {
-        margin: 6% auto;
+        margin: 20px auto 50px auto;
         .container {
             display: flex;
             justify-content: space-around;
@@ -137,7 +125,7 @@
         }
     }
     .cat {
-        background-image: url(../../images/catbg2.jpeg);
+        background-image: url(../images/catbg2.jpeg);
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
@@ -228,7 +216,7 @@
         }
     }
     .talk {
-        background-image: url(../../images/talk.jpg);
+        background-image: url(../images/talk.jpg);
         background-attachment: fixed;
         background-position: 20%;
         background-repeat: no-repeat;
