--- a/sass/modules/_halfway_house_search.scss
+++ b/sass/modules/_halfway_house_search.scss
@@ -66,63 +66,62 @@
             }
         }
     }
-    #selectBox {
-        display: none;
-    }
     .result {
-        .item {
-            width: 100%;
-            margin: 200px auto 150px auto;
-            position: relative;
-            .text {
-                width: 50%;
-                background-color: #fff;
-                font-size: $font-size-base;
-                line-height: 30px;
-                padding: 0 0 3% 5%;
-                box-shadow: 12px 10px 20px -10px #333;
-                h3 {
-                    font-size: $font-size-h3;
-                    padding: 8% 0;
-                    letter-spacing: 10px;
-                }
-                a {
-                    display: flex;
-                    justify-content: flex-end;
-                    margin-right: 25px;
-                    text-decoration: none;
-                    color: #EAAF88;
-                    &:hover {
-                        color: #333;
+        .container {
+            .item {
+                width: 90%;
+                margin: 200px auto 150px auto;
+                position: relative;
+                .text {
+                    width: 50%;
+                    background-color: #fff;
+                    font-size: $font-size-base;
+                    line-height: 30px;
+                    padding: 0 0 3% 5%;
+                    box-shadow: 12px 10px 20px -10px #333;
+                    h3 {
+                        font-size: $font-size-h3;
+                        padding: 8% 0;
+                        letter-spacing: 10px;
+                    }
+                    a {
+                        display: flex;
+                        justify-content: flex-end;
+                        margin-right: 25px;
+                        text-decoration: none;
+                        color: #EAAF88;
+                        &:hover {
+                            color: #333;
+                        }
                     }
                 }
-            }
-            .pic {
-                position: absolute;
-                top: -40px;
-                left: 50%;
-                box-shadow: 12px 10px 20px -10px #333;
-                img {
-                    width: 100%;
+                .pic {
+                    position: absolute;
+                    top: -40px;
+                    left: 50%;
+                    box-shadow: 12px 10px 20px -10px #333;
+                    img {
+                        width: 100%;
+                    }
                 }
-            }
-            .bg {
-                position: absolute;
-                top: 13%;
-                left: 5%;
-                width: 100%;
-                height: 120%;
-                box-shadow: 12px 10px 10px -4px #aaa;
-                z-index: -3;
-            }
-            .bg1 {
-                background-color: rgba(66, 136, 115, 0.767);
-            }
-            .bg2 {
-                background-color: rgba(199, 79, 73, 0.767);
-            }
-            .bg3 {
-                background-color: rgba(139, 105, 73, 0.767);
+                .bg {
+                    position: absolute;
+                    top: 13%;
+                    left: 5%;
+                    width: 100%;
+                    height: 120%;
+                    box-shadow: 12px 10px 10px -4px #aaa;
+                    z-index: -3;
+                }
+                .bg1 {
+                    background-color: rgba(66, 136, 115, 0.767);
+                }
+                .bg2 {
+                    background-color: rgba(199, 79, 73, 0.767);
+                }
+                .bg3 {
+                    background-color: rgba(139, 105, 73, 0.767);
+                }
             }
         }
     }
