--- a/sass/respond/_halfwayHouseDetailSmall.scss
+++ b/sass/respond/_halfwayHouseDetailSmall.scss
@@ -6,67 +6,47 @@
         padding: 0;
         margin: 0;
         .banner {
-            width: 100%;
-            padding-top: 80vh; 
-            animation: bb 20s linear infinite;
-            // position: static;
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
             h2 {
-                top: 3%;
-                left: 3%;
-                width: 60%;
-                line-height: 8vw; 
-                // position: static;
-            }
-            .intro {
-                display: none;
+                width: 70%;
+                background-color: transparent;
             }
             .contact {
-                width: 60%;
-                top: 20vh;
-                left: 0;
-                right: 0;
-                margin: auto; 
-                // position: static;
+                width: 70%;
+                background-color: transparent;
             }
-            .star{
-                width: 60%;
-                top: 55vh;
-                left: 0;
-                right: 0;
-                margin: auto;
-                .rating{
-                    font-size: $font-size-large*1.4;
-                    margin: 0 auto;
-                }
-                .text{
+            .container {
+                display: block;
+                .bigpic {
                     width: 100%;
+                    padding-top: 65%;
+                    margin: 0;
+                    animation: bb 20s linear infinite;
                 }
-            }
-        }
-        @keyframes bb {
-            20% {
-                background-image: url(../images/halfdetail7_resized.jpg);
-            }
-            40% {
-                background-image: url(../images/halfdetail5.jpg);
-            }
-            60% {
-                background-image: url(../images/halfdetail6.jpg);
-            }
-            80% {
-                background-image: url(../images/halfdetail4.jpg);
+                @keyframes bb {
+                    20% {
+                        background-image: url(../images/halfdetail7_resized.jpg);
+                    }
+                    40% {
+                        background-image: url(../images/halfdetail5.jpg);
+                    }
+                    60% {
+                        background-image: url(../images/halfdetail6.jpg);
+                    }
+                    80% {
+                        background-image: url(../images/halfdetail4.jpg);
+                    }
+                }
+                .text {
+                    width: 100%;
+                    margin: 0;
+                    margin-bottom: 50px;
+                }
             }
         }
         .halfwaypic {
             display: none;
         }
         .cat {
-            .flycat {
-                display: none;
-            }
             .container {
                 .catitem {
                     width: 50%;
