--- a/sass/respond/_halfwayHouseSearchSmall.scss
+++ b/sass/respond/_halfwayHouseSearchSmall.scss
@@ -4,41 +4,47 @@
     }
     .right {
         margin: 0;
-        .searchsection {
-            #selectBox {
-                display: block;
+        h2{
+            padding: 30px 0;
+        }
+        .searchsection{
+            .container{
+                .formInsert{
+                    margin: 25px 0;
+                    .select{
+                        display: block;
+                        margin: 0 auto;
+                        margin-bottom: 30px;
+                    }
+                }
             }
         }
-        #content,
-        .dropholder,
-        .flycat {
-            display: none;
-        }
-        .item {
-            width: 80%;
-            margin: 80px auto 180px auto;
-            @include clear;
-            .text {
-                position: absolute;
-                top: 60%;
-                left: 40%;
-                width: 70%;
-                color: #ddd;
-            }
-            .tx1 {
-                background-color: rgba(66, 136, 115, 0.767);
-            }
-            .tx2 {
-                background-color: rgba(199, 79, 73, 0.767);
-            }
-            .tx3 {
-                background-color: rgba(139, 105, 73, 0.767);
-            }
-            .pic {
-                position: static;
-            }
-            .bg {
-                display: none;
+        .result {
+            .container {
+                .item {
+                    width: 80%;
+                    margin: 50px auto 100px auto;
+                    @include clear;
+                    .text {
+                        width: 100%;
+                        color: #ddd;
+                    }
+                    .tx1 {
+                        background-color: rgba(66, 136, 115, 0.767);
+                    }
+                    .tx2 {
+                        background-color: rgba(199, 79, 73, 0.767);
+                    }
+                    .tx3 {
+                        background-color: rgba(139, 105, 73, 0.767);
+                    }
+                    .pic {
+                        position: static;
+                    }
+                    .bg {
+                        display: none;
+                    }
+                }
             }
         }
     }
