--- a/css/backAdoptRecord.css
+++ b/css/backAdoptRecord.css
@@ -631,17 +631,17 @@ header .icons a:hover {
   }
 }
 
-header ul li:nth-child(1) {
+header ul li:nth-child(6) {
   background-color: #fff;
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
 }
 
-header ul li:nth-child(1) a {
+header ul li:nth-child(6) a {
   color: #333;
   font-family: notoSans_r;
 }
 
-header ul li:nth-child(1):after {
+header ul li:nth-child(6):after {
   z-index: -1;
   content: '';
   display: block;
@@ -655,16 +655,22 @@ header ul li:nth-child(1):after {
   box-shadow: 3px 3px 5px rgba(63, 62, 62, 0.199);
 }
 
+header {
+  background-color: #92e9d2;
+}
+
 .right {
   width: calc(100% - 200px);
   margin-left: 200px;
+  color: #222;
 }
 
 .right .container1 {
   width: 100%;
   position: relative;
-  margin-bottom: 100px;
-  padding: 60px 50px 0;
+  padding: 0 50px;
+  max-width: 3000px;
+  text-align: center;
 }
 
 .right .container1,
@@ -672,273 +678,52 @@ header ul li:nth-child(1):after {
   outline: none;
 }
 
-.right .container1 .catItem {
-  display: block;
-  position: relative;
-}
-
-.right .container1 .catItem .img {
-  width: 300px;
-  height: auto;
-  border: 8px #fff solid;
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
-  position: relative;
-}
-
-.right .container1 .catItem .img .favorite {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: #fa3737;
-  font-size: 30px;
-  z-index: 3;
-}
-
-.right .container1 .catItem .img,
-.right .container1 .catItem figure {
-  display: inline-block;
-}
-
-.right .container1 .catItem figure {
-  vertical-align: top;
-  line-height: 1.5em;
-  padding-top: 20px;
-  padding-left: 60px;
-  position: relative;
-  width: calc(100% - 310px);
-  height: 400px;
-}
-
-.right .container1 .catItem figure h1 {
-  font-size: 30px;
-  font-weight: bold;
-}
-
-.right .container1 .catItem figure .btn {
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-}
-
-.right .container1 .donateForm {
-  width: 500px;
-  text-align: center;
-  font-size: 14px;
-  line-height: 1.5em;
-  margin-left: 320px;
-  margin-top: 50px;
-}
-
-.right .container1 .donateForm table {
-  height: 200px;
-  width: 100%;
-  border: 1px solid #000;
-}
-
-.right .container1 .donateForm table td {
-  vertical-align: middle;
-  border: 1px solid #000;
-}
-
-.right .container1 .donateForm table td:last-child {
-  width: 30%;
-}
-
-.right .container1 .donateForm table td input {
-  width: 100%;
-  height: 100%;
-  font-size: 14px;
-  line-height: 2em;
-  outline: none;
-  border: none;
-  text-align: center;
-}
-
-.right .container1 .donateForm table td input::-webkit-input-placeholder {
-  font-style: italic;
-  font-size: 14px;
-}
-
-.right .container1 .donateForm input[type=submit] {
-  margin-top: 20px;
-}
-
-.right .container1 .donateInfo {
-  letter-spacing: 2px;
-  line-height: 1.5em;
-  padding-left: 4px;
-  margin: 20px;
-}
-
-.right .container1 .donateInfo span {
-  color: #ff9f56;
-}
-
-.right .container1 .donateInfo h2 {
-  font-size: 18px;
-  text-align: center;
-}
-
-.right .container1 .donateInfo #canvas {
-  display: block;
+.right .container1 .bigImg {
+  background-size: cover;
   margin: 0 auto;
 }
 
-.right .container1 .introduction {
-  letter-spacing: 2px;
-  line-height: 1.5em;
+.right .container1 .bigImg img {
+  width: 100%;
+  max-width: 1000px;
+}
+
+.right .container1 .adoptInfomation {
+  width: 80%;
+  margin: 100px auto 100px;
+}
+
+.right .container1 .adoptInfomation select {
+  display: block;
+}
+
+.right .container1 .adoptInfomation table {
+  width: 100%;
+  margin: 40px auto 60px;
+}
+
+.right .container1 .adoptInfomation table tr {
+  border-bottom: 1px solid #333;
+}
+
+.right .container1 .adoptInfomation table tr th, .right .container1 .adoptInfomation table tr td {
+  padding-top: 16px;
+  padding-bottom: 8px;
   font-size: 14px;
 }
 
-.right .container1 .introduction .title {
-  display: block;
-  margin-top: 30px;
-  margin-bottom: 10px;
+.right .container1 .adoptInfomation table tr th {
+  font-size: 18px;
+  letter-spacing: 2px;
   font-weight: bold;
 }
 
-.right .container1 .introduction small {
-  font-size: 12px;
-  padding-left: 20px;
+.right .container1 .adoptInfomation a {
+  text-align: center;
+  text-decoration: none;
+  padding: 2px;
+  border-radius: 0px;
+  padding-left: 5px;
 }
 
-.right .container1 .introduction ol .cost {
-  color: #6969f0;
-  margin-top: 10px;
-  font-size: Georgia, "Times New Roman", Times, serif;
-  font-weight: bold;
-}
-
-.right .container1 .introduction ol p {
-  padding-left: 86px;
-}
-
-.right .container1 .introduction ol p span {
-  color: #fa9c29;
-}
-
-@media all and (max-width: 767px) {
-  header {
-    display: none;
-  }
-  .right {
-    width: 100%;
-    margin: 0;
-  }
-  .right .container1 {
-    padding-top: 0;
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .right .container1 .catItem .img,
-  .right .container1 .catItem figure {
-    display: block;
-    margin: 0;
-    margin: 0 auto;
-  }
-  .right .container1 .catItem figure {
-    height: auto;
-    padding-left: 0;
-    width: 100%;
-    margin: 0 auto;
-  }
-  .right .container1 .catItem div.btn {
-    position: relative;
-    bottom: auto;
-    margin: 20px auto 0;
-    font-size: 0;
-    width: 100%;
-  }
-  .right .container1 .catItem div.btn button.defaultBtn {
-    font-size: 14px;
-    display: block;
-    float: right;
-    width: 48%;
-    max-width: 200px;
-  }
-  .right .container1 .catItem div.btn button.defaultBtn:first-child {
-    margin-right: 10px;
-    float: left;
-  }
-  .right .container1 .catItem div.btn:after {
-    content: '';
-    clear: both;
-    display: block;
-  }
-  .right .container1 .donateForm {
-    width: 60%;
-    margin: 20px auto 0;
-  }
-  .right .container1 .donateInfo #canvas {
-    width: 100%;
-  }
-  .right .container1 .introduction {
-    margin-top: 40px;
-  }
-  footer {
-    margin-left: 0;
-    width: 100%;
-  }
-}
-
-@media all and (min-width: 768px) and (max-width: 991px) {
-  header {
-    display: none;
-  }
-  .right {
-    width: 100%;
-    margin: 0;
-  }
-  .right .container1 {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  .right .container1 .catItem .img,
-  .right .container1 .catItem figure {
-    display: block;
-    margin: 0 auto;
-  }
-  .right .container1 .catItem figure {
-    height: auto;
-    padding-left: 0;
-    width: 100%;
-    margin: 0 auto;
-  }
-  .right .container1 .catItem div.btn {
-    position: relative;
-    bottom: auto;
-    margin: 20px auto 0;
-    font-size: 0;
-    width: 60%;
-  }
-  .right .container1 .catItem div.btn button.defaultBtn {
-    display: block;
-    float: right;
-    width: 48%;
-    max-width: 200px;
-  }
-  .right .container1 .catItem div.btn button.defaultBtn:first-child {
-    margin-right: 10px;
-    float: left;
-  }
-  .right .container1 .catItem div.btn:after {
-    content: '';
-    clear: both;
-    display: block;
-  }
-  .right .container1 .donateForm {
-    width: 60%;
-    margin: 20px auto 0;
-  }
-  .right .container1 .introduction {
-    margin-top: 40px;
-  }
-  footer {
-    margin-left: 0;
-    width: 100%;
-  }
-}
-
-/*# sourceMappingURL=catContent.css.map */
+/*# sourceMappingURL=backAdoptRecord.css.map */
