--- a/sass/backAdoptRecord.scss
+++ b/sass/backAdoptRecord.scss
@@ -14,13 +14,13 @@
 @import "./modules/_signUp.scss";
 @include navNow(6);
 header {
-    background-color: rgb(146, 233, 210);
+    background-color: rgb(194, 234, 235);
 }
 
 .right {
     width: calc(100% - 200px);
     margin-left: 200px;
-    color:#222;
+    color: #222;
     .container1 {
         width: 100%;
         position: relative;
@@ -40,30 +40,31 @@ header {
                 max-width: 1000px;
             }
         }
-        .adoptInfomation{
+        .adoptInfomation {
             width: 80%;
             margin: 100px auto 100px;
-            select{
+            select {
                 display: block;
             }
-            table{
+            table {
                 width: 100%;
                 margin: 40px auto 60px;
-                tr{
-                    border-bottom:1px solid #333;
-                    th,td{
+                tr {
+                    border-bottom: 1px solid #333;
+                    th,
+                    td {
                         padding-top: 16px;
                         padding-bottom: 8px;
                         font-size: $font-size-base;
                     }
-                    th{
+                    th {
                         font-size: $font-size-large;
                         letter-spacing: 2px;
                         font-weight: bold;
                     }
                 }
             }
-            a{
+            a {
                 text-align: center;
                 text-decoration: none;
                 padding: 2px;
