--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -79,5 +79,7 @@ $large: 1200px;
 //qq
 $gap: 15px;
 //header nav
-$navColor : #eaaf88;
-$navFontColor : #fff;
+$navColor: #eaaf88;
+$navFontColor: #fff;
+$navBackColor :rgb(194, 234, 235);
+$navBackFontColor: #fff;
