--- a/sass/backEmpManage.scss
+++ b/sass/backEmpManage.scss
@@ -6,7 +6,7 @@
 @import './modules/_backHeader.scss';
 @import 'mixins/_navNow.scss';
 @import "base/btn";
-@include navNow(6);
+@include navNow(2);
 header {
     background-color: rgb(194, 234, 235);
 }
@@ -34,15 +34,23 @@ header {
                 max-width: 1000px;
             }
         }
-        .adoptInfomation {
+        .empManage {
             width: 80%;
             margin: 100px auto 100px;
-            select {
+            button {
                 display: block;
+                margin-left: auto;
+                margin-right: 0;
             }
             table {
                 width: 100%;
                 margin: 40px auto 60px;
+                .newEmpTROff {
+                    display: none;
+                }
+                .newEmpTROn {
+                    display: table-row;
+                }
                 tr {
                     border-bottom: 1px solid #333;
                     th,
@@ -57,14 +65,6 @@ header {
                         font-weight: bold;
                     }
                 }
-            }
-            a {
-                text-align: center;
-                text-decoration: none;
-                padding: 2px;
-                border-radius: 0px;
-                border-width: 1px;
-                padding-left: 5px;
             }
         }
     }
