--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -13,7 +13,9 @@
     border: 2px solid #333;
     margin: $gap 0;
 }
-
+.margin-200{
+    margin-left: 200px;
+}
 .more {
     width: 100%;
     position: absolute;
@@ -26,7 +28,6 @@
 }
 
 .banner {
-    margin-left: 200px;
     height: 100vh;
     background-image: url(../images/AdobeStock_112482963.jpeg);
     background-repeat: no-repeat;
@@ -71,6 +72,8 @@
             cursor: pointer;
         }
         input {
+            -moz-appearance: none;
+            -webkit-appearance: none;
             margin: $gap auto;
             background-color: rgba(255, 255, 255, 0.308);
             border: 3px solid #fff;
@@ -98,7 +101,6 @@
 }
 
 .pick-kit {
-    margin-left: 200px;
     text-align: center;
     height: 100vh;
     position: relative;
@@ -185,9 +187,11 @@
         position: absolute;
         top: 70vh;
         z-index: 666;
-        img {
-            width: 100%;
-            height: 100%;
+        cursor: pointer;
+        i {
+            color: #fff;
+            position: relative;
+            top: 12px;
         }
     }
     .right-arrow {
@@ -196,7 +200,6 @@
 }
 
 .half {
-    margin-left: 200px;
     background-image: url(../images/wood.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -218,12 +221,13 @@
     .half-item {
         padding: $gap/2 $gap;
         height: 25vh;
-        margin: 0.84vh 0;
+        margin: 0.84vh auto;
         display: flex;
         background-color: #fff;
+        width: 80%;
     }
     .half-qty {
-        width: 20%;
+        width: 30%;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -235,7 +239,7 @@
         }
     }
     .half-pic {
-        width: 50%;
+        width: 35%;
         height: 100%;
         background-image: url(../images/half_1.jpg);
         background-repeat: no-repeat;
@@ -243,11 +247,9 @@
         background-size: cover;
     }
     .half-text {
-        width: 25%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-left: 5%;
+        width: 35%;
+        padding: $gap;
+        position: relative;
         a {
             text-decoration: none;
             transition: .3s all;
@@ -258,7 +260,9 @@
             }
         }
         .read-more {
-            align-self: flex-end;
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
             text-decoration: underline;
         }
         .half-name {
@@ -267,12 +271,12 @@
         }
         span {
             margin: 10px 0;
+            display: block;
         }
     }
 }
 
 .shop {
-    margin-left: 200px;
     height: 100vh;
     overflow: hidden;
     background-image: url(../images/wood.jpg);
@@ -296,9 +300,12 @@
         top: -300px;
     }
     .shop-title {
-        margin-top: 15vh;
+        height: 10vh;
+        display: flex;
+        align-items: center;
         h2 {
             @extend %h2-btn;
+            height: 40px;
         }
         h3 {
             @extend %h3-btn;
@@ -326,7 +333,7 @@
     .quick-signUp {
         height: 80vh;
         width: 100%;
-        margin-left: 200px;
+
     }
     position: relative;
     footer {
@@ -334,13 +341,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-left: 0;
     }
 }
 
 .game-point {
     height: 100vh;
     background-color: #EAAF88;
-    margin-left: 200px;
     box-shadow: 20px 20px #333 inset, -20px -20px #333 inset;
     .game-point-title {
         height: 15vh;
@@ -376,7 +383,7 @@
             border-radius: 20% 60% 30% 60%;
             background-color: #EAAF88;
             bottom: 20px;
-            &:after{
+            &:after {
                 content: '';
                 display: block;
                 position: absolute;
@@ -387,7 +394,7 @@
                 right: -40px;
                 top: 50%;
             }
-            &:before{
+            &:before {
                 content: '';
                 display: block;
                 position: absolute;
@@ -421,9 +428,10 @@
             z-index: 2;
             width: 100px;
             height: 105px;
-            left:0;
+            left: 0;
         }
-        #optionA,#optionB {
+        #optionA,
+        #optionB {
             align-self: flex-start;
             width: 30%;
             height: 250px;
@@ -436,7 +444,7 @@
             width: 50px;
             height: 90px;
             z-index: 1;
-            right:0;
+            right: 0;
         }
     }
 }
